--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>scan_gui</title>
+        <title>Novstar</title>
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="UTF-8">
-    <link rel="preload" as="script" href="/./assets/novstar_gui-dxh4811e15a65bfc657.js" crossorigin></head>
+    <link rel="preload" as="script" href="/./assets/novstar_gui-dxh27a4c29882858c64.js" crossorigin></head>
     <body>
         <div id="main"></div>
-    <script type="module" async src="/./assets/novstar_gui-dxh4811e15a65bfc657.js"></script>
+    <script type="module" async src="/./assets/novstar_gui-dxh27a4c29882858c64.js"></script>
             </body>
 </html>
