deploy: f292e57f423f440afeee7a033a6ec76cc4fcd22d

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="UTF-8">
-    <link rel="preload" as="script" href="/./assets/novstar_gui-dxh27a4c29882858c64.js" crossorigin></head>
+    <link rel="preload" as="script" href="/novstar/assets/novstar_gui-dxh3e6c2184f313a3b0.js" crossorigin></head>
     <body>
         <div id="main"></div>
-    <script type="module" async src="/./assets/novstar_gui-dxh27a4c29882858c64.js"></script>
+    <script type="module" async src="/novstar/assets/novstar_gui-dxh3e6c2184f313a3b0.js"></script>
             </body>
 </html>
